--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -7,7 +7,6 @@
   align-items: center;
 
   .title {
-    padding-top: 3rem;
     margin-bottom: 1.5rem;
     h2 {
       font-size: 1.8rem;
@@ -16,43 +15,14 @@
     }
   }
 
-  .search-section {
-    position: relative;
-    width: 250px;
-    margin-left: auto;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.32);
-    
-
-    img {
-        position: absolute;
-        left: 10px; 
-        top: 50%;
-        transform: translateY(-50%);
-        width: 18px; 
-        height: 18px;
-        pointer-events: none;
-    }
-
-    input {
-        width: 100%;
-        padding: 8px 12px;
-        padding-left: 40px; 
-        border: 1px solid $primary;
-        border-radius: 3px;
-        font-size: 14px;
-    }
-  }
-
-
   .vehicle-card {
     width: 100%;
     max-width: 400rem;
     background: #fff;
-    border: 1.5px solid $primary;
-    border-radius: 2px;
+    border: 1px solid #ccc;
+    border-radius: 6px;
     padding: 1rem 1.5rem;
     margin-bottom: 1rem;
-    margin-top: 1rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -84,4 +54,64 @@
       }
     }
 
-  }}
+    .actions {
+      display: flex;
+      gap: 0.7em;
+
+      .excluir {
+        border: none;
+      }
+
+      button {
+        background: none;
+        border-right: 2px solid $primary;
+        border-left: none;
+        border-top: none;
+        border-bottom: none;
+        cursor: pointer;
+        font-size: 1.1rem;
+        color: $primary; 
+        padding-right: 13px;
+
+        &:hover {
+          color: #3a1b55;
+        }
+      }
+    }
+  }
+
+  .new-vehicle {
+    display: flex;
+    flex-direction: row;
+   
+  }
+
+  img {
+    width: 35px;
+    height: 35px;
+  }
+}
+
+@media (max-width: 768px) {
+  .new-vehicle {
+    margin-left: 0;
+    justify-content: center;
+    width: 100%;
+  
+
+    .actions {
+      margin-top: 0.5rem;
+    }
+  }
+
+  .new-vehicle {
+    margin-left: 0;
+    width: 100%;
+    justify-content: center;
+  }
+
+  img {
+    width: 30px;
+    height: 30px;
+  }
+}
